--- a/src/main.css
+++ b/src/main.css
@@ -1,14 +1,18 @@
 /* 这个文件里写的是全局样式,在各个页面都生效 */
-body, html, .owo {
+body, html {
   margin: 0;
   padding: 0;
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
   overflow: hidden;
   user-select: text;
   font: normal 12px/180% "SimSun";
   -webkit-overflow-scrolling: touch;
   position: relative;
+}
+.owo {
+  width: 100%;
+  height: 100%;
 }
 html {
   background-color: white;
